--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "editor.md": "^1.5.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {}
