--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,13 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <!--         metadata-complete="false">-->
 
     <listener>
         <listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
     </listener>
-    <!--    <listener>-->
-    <!--        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
-    <!--    </listener>-->
+        <listener>
+            <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+        </listener>
 
     <filter>
         <filter-name>log4jServletFilter</filter-name>
@@ -45,10 +44,10 @@
         <param-name>isLog4jAutoInitializationDisabled</param-name>
         <param-value>true</param-value>
     </context-param>
-    <!--    <context-param>-->
-    <!--        <param-name>contextConfigLocation</param-name>-->
-    <!--        <param-value>classpath:applicationContext.xml</param-value>-->
-    <!--    </context-param>-->
+        <context-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring-config.xml</param-value>
+        </context-param>
 
     <welcome-file-list>
         <welcome-file>/index.html</welcome-file>
@@ -59,7 +58,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:springmvc-config.xml</param-value>
+            <param-value>classpath:spring-mvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
